--- a/Earthly Elegance/assets/index.html
+++ b/Earthly Elegance/assets/index.html
@@ -57,8 +57,7 @@
                 <div
                     class="col-12 col-lg-6 d-flex flex-column justify-content-center text-center text-lg-start px-3 px-lg-5">
                     <div class="text">
-                        <h1 class="display-4 fw-semibold py-3 text-white">Create Stunning outdoor Gardens with Expert
-                            Care</h1>
+                        <h1 class="display-4 fw-semibold py-3 text-white">Create Stunning outdoor Gardens with Expert Care</h1>
                         <p class="text-white">Discover the Art of Sustainable and Beautiful Landscapes</p>
                     </div>
                     <div class="btn-div mt-3">
@@ -72,74 +71,74 @@
 
     <!-- Second section -->
 
-    <section class="second-section py-5">
-        <div class="container padding-inline">
-            <div class="row align-items-center justify-content-center p-3 p-md-5 text-center text-lg-start">
+  <section class="second-section py-5">
+  <div class="container-fluid">
+    <div class="row align-items-center justify-content-center p-3 p-md-5 text-center text-lg-start">
 
-                <!-- 1 -->
-                <div class="col-lg-3 col-sm-6 col-lg-3 mb-4">
-                    <div class="top d-flex justify-content-center justify-content-lg-start">
-                        <svg class="svg-img" viewBox="0 0 288 512" xmlns="http://www.w3.org/2000/svg">
-                            <path
-                                d="M209.2 233.4l-108-31.6C88.7 198.2 80 186.5 80 173.5c0-16.3 13.2-29.5 29.5-29.5h66.3c12.2 0 24.2 3.7 34.2 10.5 6.1 4.1 14.3 3.1 19.5-2l34.8-34c7.1-6.9 6.1-18.4-1.8-24.5C238 74.8 207.4 64.1 176 64V16c0-8.8-7.2-16-16-16h-32c-8.8 0-16 7.2-16 16v48h-2.5C45.8 64-5.4 118.7.5 183.6c4.2 46.1 39.4 83.6 83.8 96.6l102.5 30c12.5 3.7 21.2 15.3 21.2 28.3 0 16.3-13.2 29.5-29.5 29.5h-66.3C100 368 88 364.3 78 357.5c-6.1-4.1-14.3-3.1-19.5 2l-34.8 34c-7.1 6.9-6.1 18.4 1.8 24.5 24.5 19.2 55.1 29.9 86.5 30v48c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16v-48.2c46.6-.9 90.3-28.6 105.7-72.7 21.5-61.6-14.6-124.8-72.5-141.7z">
-                            </path>
-                        </svg>
-                    </div>
-                    <div class="bottom mt-3">
-                        <h3 class="py-2">Affordable Prices</h3>
-                        <p>Quality gardening and landscaping services at fair rates.</p>
-                    </div>
-                </div>
-
-                <!-- 2 -->
-                <div class="col-lg-3 col-sm-6 col-lg-3 mb-4">
-                    <div class="top d-flex justify-content-center justify-content-lg-start">
-                        <svg class="svg-img" viewBox="0 0 448 512" xmlns="http://www.w3.org/2000/svg">
-                            <path
-                                d="M383.9 308.3l23.9-62.6c4-10.5-3.7-21.7-15-21.7h-58.5c11-18.9 17.8-40.6 17.8-64v-.3c39.2-7.8 64-19.1 64-31.7 0-13.3-27.3-25.1-70.1-33-9.2-32.8-27-65.8-40.6-82.8-9.5-11.9-25.9-15.6-39.5-8.8l-27.6 13.8c-9 4.5-19.6 4.5-28.6 0L182.1 3.4c-13.6-6.8-30-3.1-39.5 8.8-13.5 17-31.4 50-40.6 82.8-42.7 7.9-70 19.7-70 33 0 12.6 24.8 23.9 64 31.7v.3c0 23.4 6.8 45.1 17.8 64H56.3c-11.5 0-19.2 11.7-14.7 22.3l25.8 60.2C27.3 329.8 0 372.7 0 422.4v44.8C0 491.9 20.1 512 44.8 512h358.4c24.7 0 44.8-20.1 44.8-44.8v-44.8c0-48.4-25.8-90.4-64.1-114.1z">
-                            </path>
-                        </svg>
-                    </div>
-                    <div class="bottom mt-3">
-                        <h3 class="py-2">Expert Team</h3>
-                        <p>Skilled professionals dedicated to crafting stunning outdoor spaces.</p>
-                    </div>
-                </div>
-
-                <!-- 3 -->
-                <div class="col-lg-3 col-sm-6 col-lg-3 mb-4">
-                    <div class="top d-flex justify-content-center justify-content-lg-start">
-                        <svg aria-hidden="true" class="e-font-icon-svg e-fas-recycle svg-img" viewBox="0 0 512 512"
-                            xmlns="http://www.w3.org/2000/svg">
-                            <path
-                                d="M184.561 261.903c3.232 13.997-12.123 24.635-24.068 17.168l-40.736-25.455-50.867 81.402C55.606 356.273 70.96 384 96.012 384H148c6.627 0 12 5.373 12 12v40c0 6.627-5.373 12-12 12H96.115c-75.334 0-121.302-83.048-81.408-146.88l50.822-81.388-40.725-25.448c-12.081-7.547-8.966-25.961 4.879-29.158l110.237-25.45c8.611-1.988 17.201 3.381 19.189 11.99l25.452 110.237zm98.561-182.915l41.289 66.076-40.74 25.457c-12.051 7.528-9 25.953 4.879 29.158l110.237 25.45c8.672 1.999 17.215-3.438 19.189-11.99l25.45-110.237c3.197-13.844-11.99-24.719-24.068-17.168l-40.687 25.424-41.263-66.082c-37.521-60.033-125.209-60.171-162.816 0l-17.963 28.766c-3.51 5.62-1.8 13.021 3.82 16.533l33.919 21.195c5.62 3.512 13.024 1.803 16.536-3.817l17.961-28.743c12.712-20.341 41.973-19.676 54.257-.022zM497.288 301.12l-27.515-44.065c-3.511-5.623-10.916-7.334-16.538-3.821l-33.861 21.159c-5.62 3.512-7.33 10.915-3.818 16.536l27.564 44.112c13.257 21.211-2.057 48.96-27.136 48.96H320V336.02c0-14.213-17.242-21.383-27.313-11.313l-80 79.981c-6.249 6.248-6.249 16.379 0 22.627l80 79.989C302.689 517.308 320 510.3 320 495.989V448h95.88c75.274 0 121.335-82.997 81.408-146.88z">
-                            </path>
-                        </svg>
-                    </div>
-                    <div class="bottom mt-3">
-                        <h3 class="py-2">Sustainable Practices</h3>
-                        <p>Eco-friendly solutions that protect and enhance nature.</p>
-                    </div>
-                </div>
-
-                <!-- 4 -->
-                <div class="col-lg-3 col-sm-6 col-lg-3 mb-4">
-                    <div class="top d-flex justify-content-center justify-content-lg-start">
-                        <svg class="svg-img" viewBox="0 0 384 512" xmlns="http://www.w3.org/2000/svg">
-                            <path
-                                d="M378.31 378.49L298.42 288h30.63c9.01 0 16.98-5 20.78-13.06 3.8-8.04 2.55-17.26-3.28-24.05L268.42 160h28.89c9.1 0 17.3-5.35 20.86-13.61 3.52-8.13 1.86-17.59-4.24-24.08L203.66 4.83c-6.03-6.45-17.28-6.45-23.32 0L70.06 122.31c-6.1 6.49-7.75 15.95-4.24 24.08C69.38 154.65 77.59 160 86.69 160h28.89l-78.14 90.91c-5.81 6.78-7.06 15.99-3.27 24.04C37.97 283 45.93 288 54.95 288h30.63L5.69 378.49c-6 6.79-7.36 16.09-3.56 24.26 3.75 8.05 12 13.25 21.01 13.25H160v24.45l-30.29 48.4c-5.32 10.64 2.42 23.16 14.31 23.16h95.96c11.89 0 19.63-12.52 14.31-23.16L224 440.45V416h136.86c9.01 0 17.26-5.2 21.01-13.25 3.8-8.17 2.44-17.47-3.56-24.26z">
-                            </path>
-                        </svg>
-                    </div>
-                    <div class="bottom mt-3">
-                        <h3 class="py-2">Customer Focus</h3>
-                        <p>Prioritizing client satisfaction with personal service.</p>
-                    </div>
-                </div>
-
-            </div>
+      <!-- 1 -->
+      <div class="col-12 col-sm-6 col-lg-3 mb-4">
+        <div class="top d-flex justify-content-center justify-content-lg-start">
+          <svg class="svg-img" viewBox="0 0 288 512" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M209.2 233.4l-108-31.6C88.7 198.2 80 186.5 80 173.5c0-16.3 13.2-29.5 29.5-29.5h66.3c12.2 0 24.2 3.7 34.2 10.5 6.1 4.1 14.3 3.1 19.5-2l34.8-34c7.1-6.9 6.1-18.4-1.8-24.5C238 74.8 207.4 64.1 176 64V16c0-8.8-7.2-16-16-16h-32c-8.8 0-16 7.2-16 16v48h-2.5C45.8 64-5.4 118.7.5 183.6c4.2 46.1 39.4 83.6 83.8 96.6l102.5 30c12.5 3.7 21.2 15.3 21.2 28.3 0 16.3-13.2 29.5-29.5 29.5h-66.3C100 368 88 364.3 78 357.5c-6.1-4.1-14.3-3.1-19.5 2l-34.8 34c-7.1 6.9-6.1 18.4 1.8 24.5 24.5 19.2 55.1 29.9 86.5 30v48c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16v-48.2c46.6-.9 90.3-28.6 105.7-72.7 21.5-61.6-14.6-124.8-72.5-141.7z">
+            </path>
+          </svg>
         </div>
-    </section>
+        <div class="bottom mt-3">
+          <h3 class="py-2">Affordable Prices</h3>
+          <p>Quality gardening and landscaping services at fair rates.</p>
+        </div>
+      </div>
+
+      <!-- 2 -->
+      <div class="col-12 col-sm-6 col-lg-3 mb-4">
+        <div class="top d-flex justify-content-center justify-content-lg-start">
+          <svg class="svg-img" viewBox="0 0 448 512" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M383.9 308.3l23.9-62.6c4-10.5-3.7-21.7-15-21.7h-58.5c11-18.9 17.8-40.6 17.8-64v-.3c39.2-7.8 64-19.1 64-31.7 0-13.3-27.3-25.1-70.1-33-9.2-32.8-27-65.8-40.6-82.8-9.5-11.9-25.9-15.6-39.5-8.8l-27.6 13.8c-9 4.5-19.6 4.5-28.6 0L182.1 3.4c-13.6-6.8-30-3.1-39.5 8.8-13.5 17-31.4 50-40.6 82.8-42.7 7.9-70 19.7-70 33 0 12.6 24.8 23.9 64 31.7v.3c0 23.4 6.8 45.1 17.8 64H56.3c-11.5 0-19.2 11.7-14.7 22.3l25.8 60.2C27.3 329.8 0 372.7 0 422.4v44.8C0 491.9 20.1 512 44.8 512h358.4c24.7 0 44.8-20.1 44.8-44.8v-44.8c0-48.4-25.8-90.4-64.1-114.1z">
+            </path>
+          </svg>
+        </div>
+        <div class="bottom mt-3">
+          <h3 class="py-2">Expert Team</h3>
+          <p>Skilled professionals dedicated to crafting stunning outdoor spaces.</p>
+        </div>
+      </div>
+
+      <!-- 3 -->
+      <div class="col-12 col-sm-6 col-lg-3 mb-4">
+        <div class="top d-flex justify-content-center justify-content-lg-start">
+                    <svg aria-hidden="true" class="e-font-icon-svg e-fas-recycle svg-img"
+            viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M184.561 261.903c3.232 13.997-12.123 24.635-24.068 17.168l-40.736-25.455-50.867 81.402C55.606 356.273 70.96 384 96.012 384H148c6.627 0 12 5.373 12 12v40c0 6.627-5.373 12-12 12H96.115c-75.334 0-121.302-83.048-81.408-146.88l50.822-81.388-40.725-25.448c-12.081-7.547-8.966-25.961 4.879-29.158l110.237-25.45c8.611-1.988 17.201 3.381 19.189 11.99l25.452 110.237zm98.561-182.915l41.289 66.076-40.74 25.457c-12.051 7.528-9 25.953 4.879 29.158l110.237 25.45c8.672 1.999 17.215-3.438 19.189-11.99l25.45-110.237c3.197-13.844-11.99-24.719-24.068-17.168l-40.687 25.424-41.263-66.082c-37.521-60.033-125.209-60.171-162.816 0l-17.963 28.766c-3.51 5.62-1.8 13.021 3.82 16.533l33.919 21.195c5.62 3.512 13.024 1.803 16.536-3.817l17.961-28.743c12.712-20.341 41.973-19.676 54.257-.022zM497.288 301.12l-27.515-44.065c-3.511-5.623-10.916-7.334-16.538-3.821l-33.861 21.159c-5.62 3.512-7.33 10.915-3.818 16.536l27.564 44.112c13.257 21.211-2.057 48.96-27.136 48.96H320V336.02c0-14.213-17.242-21.383-27.313-11.313l-80 79.981c-6.249 6.248-6.249 16.379 0 22.627l80 79.989C302.689 517.308 320 510.3 320 495.989V448h95.88c75.274 0 121.335-82.997 81.408-146.88z">
+            </path>
+          </svg>
+        </div>
+        <div class="bottom mt-3">
+          <h3 class="py-2">Sustainable Practices</h3>
+          <p>Eco-friendly solutions that protect and enhance nature.</p>
+        </div>
+      </div>
+
+      <!-- 4 -->
+      <div class="col-12 col-sm-6 col-lg-3 mb-4">
+        <div class="top d-flex justify-content-center justify-content-lg-start">
+          <svg class="svg-img" viewBox="0 0 384 512" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M378.31 378.49L298.42 288h30.63c9.01 0 16.98-5 20.78-13.06 3.8-8.04 2.55-17.26-3.28-24.05L268.42 160h28.89c9.1 0 17.3-5.35 20.86-13.61 3.52-8.13 1.86-17.59-4.24-24.08L203.66 4.83c-6.03-6.45-17.28-6.45-23.32 0L70.06 122.31c-6.1 6.49-7.75 15.95-4.24 24.08C69.38 154.65 77.59 160 86.69 160h28.89l-78.14 90.91c-5.81 6.78-7.06 15.99-3.27 24.04C37.97 283 45.93 288 54.95 288h30.63L5.69 378.49c-6 6.79-7.36 16.09-3.56 24.26 3.75 8.05 12 13.25 21.01 13.25H160v24.45l-30.29 48.4c-5.32 10.64 2.42 23.16 14.31 23.16h95.96c11.89 0 19.63-12.52 14.31-23.16L224 440.45V416h136.86c9.01 0 17.26-5.2 21.01-13.25 3.8-8.17 2.44-17.47-3.56-24.26z">
+            </path>
+          </svg>
+        </div>
+        <div class="bottom mt-3">
+          <h3 class="py-2">Customer Focus</h3>
+          <p>Prioritizing client satisfaction with personal service.</p>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
 
 
 
@@ -606,14 +605,13 @@
                     </div>
 
                 </div>
-                <!-- Services -->
+                 <!-- Services -->
                 <div class="col-12 col-md-6 col-lg-3 mb-4">
 
                     <div class="list">
                         <h3>Services</h3>
                         <ul class="list-unstyled">
-                            <li class="item-list "><a class="text-decoration-none text-muted" href="#">Outdoor
-                                    Lighting</a></li>
+                            <li class="item-list "><a class="text-decoration-none text-muted" href="#">Outdoor Lighting</a></li>
                             <li class="item-list ">
                                 <a class="text-decoration-none text-muted" href="#">Irrigation System</a>
                             </li>
@@ -632,13 +630,11 @@
                     <div class="list">
                         <h3>Address</h3>
                         <ul class="list-unstyled ">
-                            <li class="item-list  "><a class="text-decoration-none text-muted" href="#"> 455 West
-                                    Orchard Street Kings
+                            <li class="item-list  "><a class="text-decoration-none text-muted" href="#"> 455 West Orchard Street Kings
                                     Mountain, NC 280867</a>
                             </li>
                             <li class="item-list  "><a class="text-decoration-none text-muted" href="#"></a></li>
-                            <li class="item-list  "><a class="text-decoration-none text-muted" href="#">Call Us: (123)
-                                    123-0123</a></li>
+                            <li class="item-list  "><a class="text-decoration-none text-muted" href="#">Call Us: (123) 123-0123</a></li>
                         </ul>
                     </div>
                 </div>
@@ -649,7 +645,7 @@
 
     </section>
 
-
+  
 
     <!-- End Footer Section -->
 
