--- a/OutDoor-Adventure/about/index.html
+++ b/OutDoor-Adventure/about/index.html
@@ -21,9 +21,9 @@
             </button>
             <div class="collapse navbar-collapse" id="mainNav">
                 <ul class="navbar-nav ms-auto align-items-center">
-                    <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Service</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../about/index.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../Services/Service.html">Service</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Project</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
                 </ul>
