--- a/OutDoor-Adventure/index.html
+++ b/OutDoor-Adventure/index.html
@@ -22,10 +22,10 @@
       </button>
       <div class="collapse navbar-collapse" id="mainNav">
         <ul class="navbar-nav ms-auto align-items-lg-center text-center">
-          <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="about/index.html">About</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Service</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Project</a></li>
+          <li class="nav-item"><a class="nav-link" href="./index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="./about/index.html">About</a></li>
+          <li class="nav-item"><a class="nav-link" href="./Services/Service.html">Service</a></li>
+          <li class="nav-item"><a class="nav-link" href="./Projects/Project.html">Project</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
         </ul>
         <div class="text-center ms-lg-3">
